--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "db": "npx json-server --watch db/db.json --port=3001"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.33.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "json-server": "^0.17.3",
@@ -19,5 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.5"
   }
 }
